Refactored QuizService tests.